[package]
name = "pqc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.40.2"
clap = { version = "4.1.1", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
csv = "1.1.6"
bcflib = { path = "../bcflib" }
serde = { version = "1.0", features = ["derive"] }
build_html = "2.2.0"
serde_json = "1.0.91"
ndarray = { version = "0.15.6", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = true
